feat: 중복된 숫자 들어오면 예외 발생하는 기능 구현, 사용자가 구매한 로또 번호와 당첨 번호를 비교해 결과 출력하는 기능 구현 완료.